# aori-sdk-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: builder.rs  client.rs  constants.rs  error.rs  feed.rs  lib.rs  main.rs  provider.rs  request.rs  response.rs  serialize.rs  shared_types.rs  signature.rs  subscription.rs
src/abi/: AoriV2.json
