[package]
name = "aori-sdk-rs-2"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
anyhow = "1.0.79"
futures = "0.3"
jsonrpsee = { version = "0.21.0", features = ["server", "http-client", "ws-client", "macros", "client-ws-transport-native-tls"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tokio = { version = "1.16", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = { version = "0.4.13", features = ["full"] }
hyper = "0.14.20"
thiserror = "1.0"
alloy-signer = { git = "https://github.com/alloy-rs/alloy" }
alloy-primitives = { version = "0.6", default-features = false, features = ["std"] }
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "std"] }
nom = "7.1.3"
hex = "0.4.3"