[package]
name = "aori-sdk-rs-2"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.6", default-features = false, features = ["std"] }
alloy-signer = { git = "https://github.com/alloy-rs/alloy" }
alloy-sol-types = "0.6.0"
# alloy_serde_macro = "0.1.1"
alloy_serde_macro = "0.1.2"
anyhow = "1.0.79"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
hex = "0.4.3"
hyper = "0.14.20"
jsonrpsee = { version = "0.21.0", features = ["server", "http-client", "ws-client", "macros", "client-ws-transport-native-tls"] }
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "std"] }
nom = "7.1.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0"
tokio = { version = "1.16", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }

[dev-dependencies]
rand = "0.8.5"
