[package]
name = "aori-rs"
description = "Rust SDK for Aori"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.7", default-features = false, features = [
    "std", "serde"
] }
alloy_serde_macro = "0.1.2"
alloy-sol-types = { version = "0.7.0", features = ["json"] }

anyhow = "1.0.51"

async-trait = "0.1.64"
bson = "2.7.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
ethabi = "18.0.0"
ethers = { version = "2.0.14", features = ["ws", "rustls", "abigen"] }
eyre = "0.6.8"
futures = "0.3.18"
hex = "0.4.3"
hyper = "0.14.20"
jsonrpsee = { version = "0.21.0", features = [
    "server",
    "http-client",
    "ws-client",
    "macros",
    "client-ws-transport-native-tls",
] }
k256 = { version = "0.13", default-features = false, features = [
    "ecdsa",
    "std",
] }
mongodb = "2.7.1"
native-tls = "0.2"
nom = "7.1.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0"
tokio = { version = "1.34.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-tungstenite = "0.20.1"
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1.40"
tracing-loki = "0.2.4"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
url = "2.4.1"
socket2 = "0.5.5"

[dev-dependencies]
rand = "0.8.5"
